<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yannis.mycellid.MainActivity">

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <Button
        android:text="@string/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start"
        android:layout_alignParentEnd="true"
        android:id="@+id/stop"
        android:layout_alignStart="@+id/start" />

    <Button
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stop"
        android:layout_alignParentEnd="true"
        android:id="@+id/send" />

    <Button
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send"
        android:layout_alignParentEnd="true"
        android:id="@+id/clear" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/user"
        android:hint="@string/user_e_mail"
        android:text="@string/j_doe_gmail_com" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/start"
        android:layout_alignParentStart="true"
        android:id="@+id/service"
        android:hint="@string/positioning_service"
        android:text="@string/http_10_0_3_99_8081" />

    <TextView
        android:text="@string/signal_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vss"
        android:layout_above="@+id/clear"
        android:layout_toStartOf="@+id/send" />

    <TextView
        android:text="@string/mnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vmnc"
        android:layout_below="@+id/stop"
        android:layout_alignStart="@+id/vss" />

    <TextView
        android:text="@string/cid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vcid"
        android:layout_alignBaseline="@+id/vmnc"
        android:layout_alignBottom="@+id/vmnc"
        android:layout_alignStart="@+id/vmcc" />

    <TextView
        android:text="@string/mcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vmcc"
        android:layout_marginStart="62dp"
        android:layout_alignBaseline="@+id/clear"
        android:layout_alignBottom="@+id/clear"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vlac"
        android:layout_alignBaseline="@+id/vss"
        android:layout_alignBottom="@+id/vss"
        android:layout_alignStart="@+id/vcid" />

    <TextView
        android:text="@string/qcid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qcid"
        android:layout_alignBaseline="@+id/vcid"
        android:layout_alignBottom="@+id/vcid"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/qlac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qlac"
        android:layout_alignBaseline="@+id/vlac"
        android:layout_alignBottom="@+id/vlac"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/qmcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/vmcc"
        android:layout_alignParentStart="true"
        android:id="@+id/qmcc" />

    <TextView
        android:text="@string/qmnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qmnc"
        android:layout_alignBaseline="@+id/vmnc"
        android:layout_alignBottom="@+id/vmnc"
        android:layout_toStartOf="@+id/vmnc"
        android:layout_marginEnd="12dp" />

    <TextView
        android:text="@string/qss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/vss"
        android:layout_alignStart="@+id/qmnc"
        android:id="@+id/qss" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/CallStateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:maxLines="10000"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical" />


    </ScrollView>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clear"
        android:layout_alignParentStart="true"
        android:id="@+id/spinner" />

</RelativeLayout>
